--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <!-- You can change the theme colors from here -->
     <link
       href="assets/css/colors/default-dark.css"
-      id="theme"
+      id="temaDelSitio"
       rel="stylesheet"
     />
   </head>
@@ -52,6 +52,6 @@
     <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
-    <script src="assets/js/custom.min.js"></script>
+    <script src="assets/js/custom.js"></script>
   </body>
 </html>
